--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,7 @@ div {
     text-align : center ;
 }
 
+
 table {
     border-collapse:  collapse; /* セルの線を重ねる */
     margin-left: auto;
@@ -23,4 +24,19 @@ h1 {
   color: #010101;/*文字色*/
   background: #eaf3ff;/*背景色*/
   border-bottom: solid 3px #516ab6;/*下線*/
+}
+
+
+.container {
+  display: flex;
+}
+
+.table-container {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.form-container {
+    flex: 1;
+    margin-left: 10px;
 }
