--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,6 @@
 <br>
 
 <!-- プロダクト管理システムへのリンク -->
-<div><a href="/product">プロダクト管理システム</a></div>
+<div><a href="/product">商品管理システム</a></div>
 </body>
 </html>
