--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,9 +4,10 @@ div {
 
 
 table {
+    width: 60%;
     border-collapse:  collapse; /* セルの線を重ねる */
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .tr:nth-child(odd) {
@@ -40,3 +41,8 @@ h1 {
     flex: 1;
     margin-left: 10px;
 }
+
+hr{
+    width: 50%;
+}
+
