--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -17,7 +17,7 @@
 <div class="form-container">
     <div><b>追加</b></div>
     <br>
-    <form method="post" action="/addProduct">
+    <form method="post" action="/insertProduct">
         <table>
             <tr>
                 <td><label class="label" for="name">名前:</label></td>
@@ -38,7 +38,7 @@
 
     <div><b>更新</b></div>
     <br>
-    <form method="post" action="/addProduct">
+    <form method="post" action="/insertProduct">
         <table>
             <tr>
                 <td><label for="id">ID:</label></td>
@@ -63,7 +63,7 @@
 
     <div><b>削除</b></div>
     <br>
-    <form method="post" action="/addProduct">
+    <form method="post" action="/insertProduct">
         <table>
             <tr>
                 <td><label for="id">ID:</label></td>
