--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -14,85 +14,100 @@
 
 <div class="container">
 
-<div class="form-container">
-    <div><b>追加</b></div>
-    <br>
-    <form method="post" action="/insertProduct">
+    <!-- 入力フォーム -->
+    <div class="form-container">
+
+        <!-- 追加フォーム -->
+        <div><b>追加</b></div>
+        <br>
+        <form method="post" action="/insertProduct">
+            <table>
+                <tr>
+                    <td><label class="label" for="name">名前:</label></td>
+                    <td><input type="text" id="name" name="name" required></td>
+                </tr>
+                <tr>
+                    <td><label for="price">価格:</label></td>
+                    <td><input type="number" id="price" name="price" required></td>
+                </tr>
+            </table>
+            <br>
+            <div>
+                <button type="submit">追加</button>
+            </div>
+        </form>
+
+        <br>
+        <hr>
+        <br>
+
+        <!-- 更新フォーム -->
+        <div><b>更新</b></div>
+        <br>
+        <form method="post" action="/updateProduct">
+            <table>
+                <tr>
+                    <td><label for="id">ID:</label></td>
+                    <td><input type="text" id="id" name="id" required></td>
+                </tr>
+                <tr>
+                    <td><label for="name">名前:</label></td>
+                    <td><input type="text" id="name" name="name" required></td>
+                </tr>
+                <tr>
+                    <td><label for="price">価格:</label></td>
+                    <td><input type="number" id="price" name="price" required></td>
+                </tr>
+            </table>
+            <br>
+            <div>
+                <button type="submit">更新</button>
+            </div>
+        </form>
+
+        <br>
+        <hr>
+        <br>
+
+        <!-- 削除フォーム -->
+        <div><b>削除</b></div>
+        <br>
+        <form method="post" action="/insertProduct">
+            <table>
+                <tr>
+                    <td><label for="id">ID:</label></td>
+                    <td><input type="text" id="id" name="id" required></td>
+                </tr>
+            </table>
+            <br>
+            <div>
+                <button type="submit">削除</button>
+            </div>
+        </form>
+
+    </div>
+
+
+    <!-- 商品一覧テーブル -->
+    <div class="table-container">
+        <div><b>商品一覧</b></div>
+        <br>
         <table>
-            <tr>
-                <td><label class="label" for="name">名前:</label></td>
-                <td><input type="text" id="name" name="name" required></td>
+            <tr class="tr">
+                <th>ID</th>
+                <th>名前</th>
+                <th>価格</th>
             </tr>
-            <tr>
-                <td><label for="price">価格:</label></td>
-                <td><input type="number" id="price" name="price" required></td>
+            <tr class="tr" th:each="product : ${productList}">
+                <td th:text="${product.getId}"></td>
+                <td th:text="${product.getName}"></td>
+                <td th:text="${product.getPrice}"></td>
             </tr>
         </table>
-        <br>
-        <div><button type="submit">追加</button></div>
-    </form>
+    </div>
 
-    <br>
-    <hr>
-    <br>
-
-    <div><b>更新</b></div>
-    <br>
-    <form method="post" action="/insertProduct">
-        <table>
-            <tr>
-                <td><label for="id">ID:</label></td>
-                <td><input type="text" id="id" name="id" required></td>
-            </tr>
-            <tr>
-                <td><label for="name">名前:</label></td>
-                <td><input type="text" id="name" name="name" required></td>
-            </tr>
-            <tr>
-                <td><label for="price">価格:</label></td>
-                <td><input type="number" id="price" name="price" required></td>
-            </tr>
-        </table>
-        <br>
-        <div><button type="submit">更新</button></div>
-    </form>
-
-    <br>
-    <hr>
-    <br>
-
-    <div><b>削除</b></div>
-    <br>
-    <form method="post" action="/insertProduct">
-        <table>
-            <tr>
-                <td><label for="id">ID:</label></td>
-                <td><input type="text" id="id" name="id" required></td>
-            </tr>
-        </table>
-        <br>
-        <div><button type="submit">削除</button></div>
-    </form>
-</div>
-<div class="table-container">
-    <div><b>商品一覧</b></div>
-    <br>
-<table>
-    <tr class="tr">
-        <th>ID</th>
-        <th>名前</th>
-        <th>価格</th>
-    </tr>
-    <tr class="tr" th:each="product : ${productList}">
-        <td th:text="${product.id}"></td>
-        <td th:text="${product.name}"></td>
-        <td th:text="${product.price}"></td>
-    </tr>
-</table>
-</div>
 
 </div>
-
 
 </body>
 </html>
