--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -72,7 +72,7 @@
         <!-- 削除フォーム -->
         <div><b>削除</b></div>
         <br>
-        <form method="post" action="/insertProduct">
+        <form method="post" action="/deleteProduct">
             <table>
                 <tr>
                     <td><label for="id">ID:</label></td>
