--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -14,11 +14,12 @@
 <br>
 
 <!-- エラー表示 -->
-<table border="2" style="border-collapse: collapse; border-color: #ff9393">
-    <tr th:if="${validationError}" th:each="error : ${validationError}">
+<table th:if="${validationError != null}" border="2" style="border-collapse: collapse; border-color: #ff9393">
+    <tr th:if="${validationError != null}" th:each="error : ${validationError}">
         <td style="color: #ff9393;" th:text="${error}"></td>
     </tr>
 </table>
+
 
 <br>
 
@@ -34,11 +35,11 @@
             <table>
                 <tr>
                     <td>名前:</td>
-                    <td><input type="text" th:field="*{name}" /></td>
+                    <td><input type="text" th:field="*{name}"/></td>
                 </tr>
                 <tr>
                     <td>価格:</td>
-                    <td><input type="text" th:field="*{price}" /></td>
+                    <td><input type="text" th:field="*{price}"/></td>
                 </tr>
             </table>
             <br>
@@ -59,15 +60,15 @@
             <table>
                 <tr>
                     <td>ID:</td>
-                    <td><input type="text" th:field="*{id}" /></td>
+                    <td><input type="text" th:field="*{id}"/></td>
                 </tr>
                 <tr>
                     <td>名前:</td>
-                    <td><input type="text" th:field="*{name}" /></td>
+                    <td><input type="text" th:field="*{name}"/></td>
                 </tr>
                 <tr>
                     <td>価格:</td>
-                    <td><input type="text" th:field="*{price}" /></td>
+                    <td><input type="text" th:field="*{price}"/></td>
                 </tr>
             </table>
             <br>
@@ -87,7 +88,7 @@
             <table>
                 <tr>
                     <td>ID:</td>
-                    <td><input type="text" th:field="*{id}" /></td>
+                    <td><input type="text" th:field="*{id}"/></td>
                 </tr>
             </table>
             <br>
